# Aperture-Lens

./: .gas-snapshot  .gitignore  .gitmodules  Cargo.toml  README.md  foundry.toml  hardhat.config.ts  index.ts  package.json  remappings.txt  rustfmt.toml  tsconfig.json
.github/workflows/: foundry.yml  nodejs.yml  publish.yml  rust.yml
contracts/: Dex.sol  EphemeralAllPositionsByOwner.sol  EphemeralGetMostRecentPositionsPCSV4.sol  EphemeralGetPopulatedTicksInRange.sol  EphemeralGetPopulatedTicksInRangePCSV4.sol  EphemeralGetPopulatedTicksInRangeV4.sol  EphemeralGetPosition.sol  EphemeralGetPositionPCSV4.sol  EphemeralGetPositionV4.sol  EphemeralGetPositions.sol  EphemeralGetPositionsPCSV4.sol  EphemeralGetPositionsV4.sol  EphemeralPoolPositions.sol  EphemeralPoolSlots.sol  EphemeralPoolTickBitmap.sol  EphemeralPoolTicks.sol  EphemeralStorageLens.sol  PCSV3PositionUtils.sol  PoolUtils.sol  PoolUtilsPCSV4.sol  PoolUtilsV4.sol  PositionLens.sol  PositionLensPCSV4.sol  PositionLensV4.sol  PositionUtils.sol  PositionUtilsPCSV4.sol  PositionUtilsV4.sol
contracts/interfaces/: ISlipStreamCLFactory.sol  ISlipStreamCLPool.sol
src/: caller.rs  index.ts  lib.rs  pool_lens.rs  position_lens.rs  storage_lens.rs
src/bindings/: bit_math.rs  ephemeral_all_positions_by_owner.rs  ephemeral_get_populated_ticks_in_range.rs  ephemeral_get_position.rs  ephemeral_get_positions.rs  ephemeral_pool_positions.rs  ephemeral_pool_slots.rs  ephemeral_pool_tick_bitmap.rs  ephemeral_pool_ticks.rs  ephemeral_storage_lens.rs  erc20_caller.rs  fixed_point_96.rs  fixed_point_math_lib.rs  full_math.rs  (+40 more)
(+25 files in other folders)
