[package]
name = "aperture-lens"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Aperture-Finance/Aperture-Lens"

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
ethers = { version = "2.0.10", features = ["default"] }
futures = "0.3.29"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
