[package]
name = "aperture-lens"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Aperture-Finance/Aperture-Lens"

[dependencies]
anyhow = "1"
ethers = { version = "2", features = ["default"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.35", features = ["full"] }
