[package]
name = "aperture-lens"
version = "0.4.1"
edition = "2021"
authors = ["Aperture Finance <engineering@aperture.finance>"]
description = "Contains ephemeral lens contracts that can be called without deployment and their Rust interfaces."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Aperture-Finance/Aperture-Lens"
keywords = ["aperture", "ethereum", "solidity", "rust", "uniswap"]
include = ["src/**/*.rs"]

[dependencies]
anyhow = "1"
ethers = "2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.37", features = ["full"] }
